kubernetes/grafana/service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
  labels:
    app: grafana
spec:
  type: NodePort
  ports:
  - port: 3000
    nodePort: 30080
    protocol: TCP
  selector:
    app: grafana
